# pcm-llm

./: .gitignore  .pre-commit-config.yaml  COLAB_SETUP.md  Colab_Benchmark.ipynb  Makefile  README.md  UNLIMITED_MODE_README.md  benchmark_analyzer.py  colab_setup.sh  config.py  main.py  main_old.py  pyproject.toml  pytest.ini  quick_analyzer.py  requirements.txt  test_extraction.py  test_huggingface.py  test_openrouter.py  test_unlimited_mode.py
compressed_cache/compressed/: classification_llmlingua2_6e443cf987e485c7.json  classification_llmlingua2_b8f6c744480c3e33.json  reasoning_llmlingua2_10fd818e3e071db5.json  reasoning_llmlingua2_80b053cb0d01460d.json  summarization_llmlingua2_6916f67e8ccda812.json  summarization_llmlingua2_d84a5444177a8fd3.json
compressed_cache/samples/: classification_1_samples.json  classification_7_samples.json  reasoning_1_samples.json  reasoning_7_samples.json  summarization_1_samples.json  summarization_7_samples.json
compressors/: __init__.py  base.py  factory.py  llmlingua2.py  naive_truncation.py  selective_context.py
core/: __init__.py  benchmark_executor.py  benchmark_service.py  bootstrap.py  cli.py  container.py  device_service.py  llm_factory.py
core/config/: __init__.py  config_manager.py  settings.py
core/pipeline/: compression_pipeline.py  data_loader_pipeline.py  evaluation_pipeline.py
data_loaders/: __init__.py  loaders.py
evaluation/: __init__.py  evaluator.py  utils.py
llms/: __init__.py  factory.py  huggingface_llm.py  llamacpp_llm.py  llamacpp_simple.py  manual_llm.py  mock_llm.py  ollama_llm.py  openai_llm.py  openrouter_llm.py
llms/base/: base.py
llms/factory/: __init__.py  factory.py
llms/providers/: __init__.py  huggingface_llm.py  llamacpp_llm.py  manual_llm.py  mock_llm.py  ollama_llm.py  openai_llm.py  openrouter_llm.py
old_analyzers_backup/: data_analyzer.py
test_results/: benchmark_test_task_llmlingua2_20250831_211205.csv  benchmark_test_task_llmlingua2_20250831_211205_summary.json
tests/: __init__.py  test_config.py  test_enhanced_logging.py  test_new_ollama.py  test_ollama.py  test_ollama_qwen.py  test_ollama_rest.py  test_ollama_structure.py  test_runner.py  test_simple_llamacpp.py
tests/fixtures/: __init__.py  base_fixture.py  test_fixtures.py
tests/functional/: test_cli.py  test_openrouter.py
tests/integration/: test_benchmark_service.py
tests/unit/: test_config.py  test_device_service.py  test_llm_factory.py
utils/: __init__.py  analyzer_adapter.py  cache_utils.py  checkpoint_utils.py  data_collector.py  data_enhancer.py  data_utils.py  file_writer.py  logger.py  logger_backup.py  prompt_utils.py  report_generator.py  run_info_logger.py  system_utils.py  thread_safe_logger.py
utils/analysis/: analyzer_adapter.py
utils/cache/: cache_utils.py  checkpoint_utils.py
utils/data/: data_collector.py  data_enhancer.py  data_utils.py  file_writer.py
utils/loggers/: logger.py  run_info_logger.py  thread_safe_logger.py
utils/system/: system_utils.py
