[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pcm-llm"
version = "0.1.0"
description = "A comprehensive benchmarking framework for evaluating prompt compression methods across different Large Language Models (LLMs) and tasks"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PCM-LLM Team", email = "team@pcm-llm.org"}
]
maintainers = [
    {name = "PCM-LLM Maintainers", email = "maintainers@pcm-llm.org"}
]
keywords = ["llm", "prompt-compression", "benchmarking", "ai", "nlp", "evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.40.0",
    "torch>=2.1.0",
    "accelerate>=0.29.0",
    "einops>=0.7.0",
    "bitsandbytes>=0.41.0",
    "openai>=1.3.0",
    "datasets>=2.19.0",
    "llmlingua>=0.2.2",
    "llama-cpp-python>=0.2.90",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/pcm-llm/pcm-llm"
Documentation = "https://pcm-llm.readthedocs.io/"
Repository = "https://github.com/pcm-llm/pcm-llm.git"
"Bug Tracker" = "https://github.com/pcm-llm/pcm-llm/issues"
"Source Code" = "https://github.com/pcm-llm/pcm-llm"

[project.scripts]
pcm-llm = "core.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "compressors*", "llms*", "data_loaders*", "evaluation*", "utils*"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["core", "compressors", "llms", "data_loaders", "evaluation", "utils"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["core", "compressors", "llms", "data_loaders", "evaluation", "utils"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
